Pain pt2